# discord-linked-role

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  wsgi.py
.github/workflows/: cd.yml  ci.yml
src/: app.py  config.py  database.py  discord.py  discord_oauth.py  oidc.py  register_metadata.py  ucam.py
src/templates/: base.j2  error.html  error.j2  success.html  success.j2
