[project]
name = "discord-linked-role"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.0.0",
    "requests-oauthlib>=1.3.0",
    "msal>=1.33.0",
    "msgraph-sdk>=1.40.0",
    "flask[async]>=3.1.1",
    "gunicorn>=23.0.0",
]
